--- a/.gitignore
+++ b/.gitignore
@@ -2,25 +2,8 @@
 
 # dependencies
 /node_modules
-/frontend/node_modules
+/frontend/node_modules/
 /frontend/build
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+node_modules/
 .env
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/.env
